test/compile-fail/function-nonlocal-assign.as
let a;

def method() {
  a = 30; // error
}
